# fb2tele-selenium

./: .gitignore  README.md  a.html  fb.py  fetch.py  gptit.py  hash_string.py  keep_alive.py  login.py  main.py  manage.py  posts.json  pyproject.toml  readme.md  replit.nix  requirements.txt  result  scrap.py  secret.py  setup_selenium.py  sms_bot.py  tele_bot.py  test.py
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.1.2-py3-none-any/pip-23.1.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-68.0.0-py3-none-any/setuptools-68.0.0.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.40.0-py3-none-any/wheel-0.40.0.dist-info/: RECORD
bot/: admin.py  models.py  serializers.py  urls.py  views.py
bot/fetch/: ai.py  ai_instruction.txt  browser.py  fb2tele.py  post.py  tele_bot.py
bot/migrations/: 0001_initial.py
fb2tele/: asgi.py  settings.py  urls.py  wsgi.py
