[tool.poetry]
name = "repl_nix_FB2Tele"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.10.0"
telegram = "^0.0.1"
Flask = "^2.3.3"
waitress = "^2.1.2"
Xf-scrap = "^1.0"
fb = "^0.4.0"
login = "^0.0.6"
aiohttp = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
